# AQHICanadaApp

./: .gitignore  .gitmodules  PRIVACY.md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jpeg2000decoder.c
app/src/main/res/drawable/: alert_statement.xml  alert_statement_dark.xml  alert_statement_white.xml  alert_warn.xml  alert_watch.xml  arrow.xml  arrow_dark.xml  arrow_light.xml  face_widget_aoc_background.xml  face_widget_background.xml  gauge_arrow.xml  gauge_background.xml  gauge_background_numbers.xml  loading_dots.xml  location_pin.xml  location_pin_selected.xml  map_scale_1.xml  map_scale_2.xml  map_scale_3.xml  map_scale_4.xml  map_scale_5.xml  outline_bar_chart_24.xml  outline_canada.xml  overlay_map_marker_value.xml  round_pin.xml  soft_border.xml  widget_background.xml  widget_background_dark.xml  widget_background_light.xml
app/src/main/res/drawable-night/: outline_bar_chart_24.xml
app/src/main/res/layout/: alert_layout.xml  change_location_activity.xml  face_widget.xml  face_widget_aoc.xml  footer_layout.xml  forecast_layout.xml  header_layout.xml  main_activity.xml  overlay_map_marker.xml  pollution_layout.xml  widget_config_activity.xml  widget_layout_face.xml  widget_layout_large.xml  widget_layout_small.xml
app/src/main/res/raw/: about_aqhi.html  facewidgets.json  guidelines_no.html  guidelines_no2.html  guidelines_o3.html  guidelines_pm10.html  guidelines_pm25.html  (+5 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+100 files in other folders)
